# old_NFShmServer

./: .gitignore  CMakeLists.txt  README.md  build_debug.sh  build_dynamic_debug.sh  build_dynamic_release.sh  build_release.sh  make.sh  ulimit.sh
Excel/: Constant.xls  ErrorInfo.xls  (+2 more)
src/NFComm/NFMessageDefine/: CMakeLists.txt  FishResMeta.pb.cc  FishResMeta.pb.h  FishResMeta_s.cpp  FishResMeta_s.h  LinkResMeta.pb.cc  LinkResMeta.pb.h  LinkResMeta_s.cpp  LinkResMeta_s.h  NFGameConfig.cpp  NFGameConfig.h  NFMsgDefine.h  ResMeta.pb.cc  ResMeta.pb.h  ResMeta_s.cpp  ResMeta_s.h  proto_common.pb.cc  proto_common.pb.h  proto_common_s.cpp  proto_common_s.h  proto_cs.pb.cc  proto_cs.pb.h  proto_cs_bank.pb.cc  proto_cs_bank.pb.h  proto_cs_email.pb.cc  proto_cs_email.pb.h  proto_cs_game.pb.cc  proto_cs_game.pb.h  proto_cs_login.pb.cc  proto_cs_login.pb.h  proto_cs_rank.pb.cc  proto_cs_rank.pb.h  proto_error_code.pb.cc  proto_error_code.pb.h  proto_event.pb.cc  proto_event.pb.h  proto_svr_bank.pb.cc  proto_svr_bank.pb.h  proto_svr_behavior.pb.cc  proto_svr_behavior.pb.h  (+14 more)
src/NFPluginLoader/: CMakeLists.txt  NFCAppInited.cpp  NFCAppInited.h  NFCDynLib.cpp  NFCDynLib.h  NFCDynLibMgr.cpp  NFCDynLibMgr.h  NFCLoadStaticPlugin.cpp  NFCPluginManager.cpp  NFCPluginManager.h  NFCrashHandlerMgr.cpp  NFCrashHandlerMgr.h  NFPluginLoader.cpp  NFPrintfLogo.cpp  NFPrintfLogo.h  NFProcessParameter.h  NFSignalHandleMgr.cpp  NFSignalHandleMgr.h  demangle.cpp  demangle.h  dllmain.cpp
src/NFServer/: CMakeLists.txt
src/NFServer/NFCommHead/: NFCommLogicHead.h  NFGameDeskService.h  NFIAccountLoginModule.h  NFICommLogicModule.h  NFIFishAlgoMgr.h  NFIFishAlgoModule.h  NFIGameConfigModule.h  NFIGameDesk.h  NFIGameDeskHandle.h  NFIGamePlayer.h  NFIGamePlayerModule.h  NFIGameRobot.h  NFIGameRobotHandle.h  NFIGameRoomModule.h  NFIGameServerModule.h  NFILogicServerModule.h  NFILoginServerModule.h  NFIMasterServerModule.h  NFIProxyClientModule.h  NFIProxyServerModule.h  NFIRoomServerModule.h  NFIRouteAgentServerModule.h  NFIRouteServerModule.h  NFISnsServerModule.h  NFIStoreServerModule.h  NFISubGameModule.h  NFIUserDetailModule.h  NFIUserMailModule.h  NFIWebServerModule.h  NFIWorldPlayerModule.h  NFIWorldServerModule.h  NFUserMailDefine.h
src/NFServer/NFCommLogic/: CMakeLists.txt
src/NFServer/NFCommLogic/NFCommLogicPlugin/: CMakeLists.txt  NFCommLogicModule.cpp  NFCommLogicModule.h  NFCommLogicPlugin.cpp  NFCommLogicPlugin.h  NFConstDesc.cpp  NFConstDesc.h  NFNameDesc.cpp  NFNameDesc.h
src/NFServer/NFGameServer/: CMakeLists.txt
src/NFServer/NFGameServer/NFGameServerPlugin/: CMakeLists.txt  NFGameServerModule.cpp  NFGameServerModule.h  NFGameServerPlugin.cpp  NFGameServerPlugin.h
src/NFServer/NFGlobalServer/: CMakeLists.txt  NFGlobalServerModule.cpp  NFGlobalServerModule.h  NFGlobalServerPlugin.cpp  NFGlobalServerPlugin.h
src/NFServer/NFLogicServer/: CMakeLists.txt
src/NFServer/NFLogicServer/NFLogicServerPlugin/: CMakeLists.txt  NFLogicServerModule.cpp  NFLogicServerModule.h  NFLogicServerPlugin.cpp  NFLogicServerPlugin.h
src/NFServer/NFLoginServer/: CMakeLists.txt
src/NFServer/NFLoginServer/NFLoginServerPlugin/: CMakeLists.txt  NFLoginServerModule.cpp  NFLoginServerModule.h  NFLoginServerPlugin.cpp  NFLoginServerPlugin.h
src/NFServer/NFMasterServer/: CMakeLists.txt
src/NFServer/NFMasterServer/NFMasterServerPlugin/: CMakeLists.txt  NFMasterServerModule.cpp  NFMasterServerModule.h  NFMasterServerPlugin.cpp  NFMasterServerPlugin.h
src/NFServer/NFMonitorServer/: CMakeLists.txt
src/NFServer/NFMonitorServer/NFMonitorServerPlugin/: CMakeLists.txt  NFMonitorServerModule.cpp  NFMonitorServerModule.h  NFMonitorServerPlugin.cpp  NFMonitorServerPlugin.h  NFProcMonitor.cpp  NFProcMonitor.h
src/NFServer/NFProxyAgentServer/: CMakeLists.txt  NFProxyAgentServerModule.cpp  NFProxyAgentServerModule.h  NFProxyAgentServerPlugin.cpp  NFProxyAgentServerPlugin.h
src/NFServer/NFProxyServer/: CMakeLists.txt
src/NFServer/NFProxyServer/NFProxyServerPlugin/: CMakeLists.txt  NFProxyServerModule.cpp  NFProxyServerModule.h  NFProxyServerPlugin.cpp  NFProxyServerPlugin.h
src/NFServer/NFRouteAgentServer/: CMakeLists.txt
src/NFServer/NFRouteAgentServer/NFRouteAgentServerPlugin/: CMakeLists.txt  NFRouteAgentServerModule.cpp  NFRouteAgentServerModule.h  NFRouteAgentServerPlugin.cpp  NFRouteAgentServerPlugin.h
src/NFServer/NFRouteServer/: CMakeLists.txt
src/NFServer/NFRouteServer/NFRouteServerPlugin/: CMakeLists.txt  NFCRouteServerModule.cpp  NFCRouteServerModule.h  NFRouteServerPlugin.cpp  NFRouteServerPlugin.h
src/NFServer/NFSnsServer/: CMakeLists.txt
src/NFServer/NFSnsServer/NFSnsServerPlugin/: CMakeLists.txt  NFSnsServerModule.cpp  NFSnsServerPlugin.cpp
src/NFServer/NFStoreServer/: CMakeLists.txt
src/NFServer/NFStoreServer/NFStoreServerPlugin/: CMakeLists.txt  NFCStoreServerModule.cpp  NFCStoreServerModule.h  NFStoreServerPlugin.cpp  NFStoreServerPlugin.h
src/NFServer/NFWebServer/: CMakeLists.txt
src/NFServer/NFWebServer/NFWebServerPlugin/: NFCWebServerModule.cpp  NFWebServerPlugin.cpp
src/NFServer/NFWorldServer/: CMakeLists.txt
src/NFServer/NFWorldServer/NFWorldServerPlugin/: CMakeLists.txt  NFWorldServerModule.cpp  NFWorldServerModule.h  NFWorldServerPlugin.cpp  NFWorldServerPlugin.h
src/NFServerLogic/NFGameServer/NFGameServerPlayerPlugin/: CMakeLists.txt  NFGameConfigModule.cpp  NFGameConfigModule.h  NFGameDesk.cpp  NFGameDesk.h  NFGameLogHandle.cpp  NFGameLogHandle.h  NFGameRobot.cpp  NFGameRobot.h  NFGameRobotMgr.cpp  NFGameRobotMgr.h  NFGameRoom.cpp  NFGameRoom.h  NFGameRoomMgr.cpp  NFGameRoomMgr.h  NFGameRoomModule.cpp  NFGameRoomModule.h  NFGameServerModule.cpp  NFGameServerModule.h  NFGameServerPlugin.cpp  NFGameSession.cpp  NFGameSession.h  NFGameSessionMgr.cpp  NFGameSessionMgr.h  NFGameWebHandleModule.cpp  NFGameWebHandleModule.h  NFPaoMaDengMgr.cpp  NFPaoMaDengMgr.h  NFRobotCommon.cpp  NFRobotCommon.h  NFRobotMgr.cpp  NFRobotMgr.h  NFTransCreateRobot.cpp  NFTransCreateRobot.h  NFTransGamePlayerBase.cpp  NFTransGamePlayerBase.h  NFTransQueryCoinBalance.cpp  NFTransQueryCoinBalance.h
(+804 files in other folders)
