CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY("NFCommLogic")
ADD_SUBDIRECTORY("NFGameServer")
ADD_SUBDIRECTORY("NFLoginServer")
ADD_SUBDIRECTORY("NFMasterServer")
ADD_SUBDIRECTORY("NFProxyServer")
ADD_SUBDIRECTORY("NFProxyAgentServer")
ADD_SUBDIRECTORY("NFWorldServer")
ADD_SUBDIRECTORY("NFStoreServer")
ADD_SUBDIRECTORY("NFRouteAgentServer")
ADD_SUBDIRECTORY("NFRouteServer")
ADD_SUBDIRECTORY("NFLogicServer")
ADD_SUBDIRECTORY("NFSnsServer")
ADD_SUBDIRECTORY("NFWebServer")
#ADD_SUBDIRECTORY("NFMonitorServer")
ADD_SUBDIRECTORY("NFGlobalServer")


